@@ -1,5 +1,11 @@
 2008-10-16  Jonathan Pryor  <jonpryor@vt.edu>
 
+	* Makefile: Add EXTRA_DISTFILES; monodoc.dll should depend upon
+	  Makefile (in case the /resource: lines change); shorten the .gif
+	  resource names.
+
+2008-10-16  Jonathan Pryor  <jonpryor@vt.edu>
+
 	* Test (svn:ignore): Ignore generated files.
 	* Makefile: Add tests for man-provider.
 
